assets/css/style.css
/**
 jQuery RPG Game
 **/

/*@font-face {
    font-family: 'the_fresh_prince';
    src: url('../fonts/the_fresh_prince/thefreshprince_abgespeckt.woff2') format('woff2'),
         url('../fonts/the_fresh_prince/thefreshprince_abgespeckt.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}*/

html, body {
  height: 100%;
}
body {
  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
  font-size: 18px;
  color: #777;
}
h1, h2, h3, h4 {
  color: #000;
  letter-spacing: .08em;
}
h1 {
  font-size: 42px;
  line-height: 1;
  color: #fff;
  margin: 10px;
  padding: 15px;
  float: left;
}
h2 {
  font-size: 28px;
  margin-bottom: 30px;
  padding-bottom: 26px;
}
h3 {
  margin-bottom: 5px;
  padding: 10px 10px 10px 0;
  font-size: 22px;
  line-height: 1.5;
  letter-spacing: .12em;
}
h4 {
  font-size: 18px;
  margin-bottom: 20px;
  padding-bottom: 16px;
}
p {
  padding: 10px 0;
  line-height: 1.9;
}
ol {
  list-style-type: decimal;
  padding: 20px;
}
ul {
  list-style-type: circle;
}
li {
  padding: 10px;
}
ol ol {
  list-style-type: lower-alpha;
}
ul ul {
  list-style-type: square;
}

header, section, footer {
  overflow: auto;
}
header {
  background-color: #000;
}
header img {
  height: 60px;
  padding: 14px 20px;
  float: left;
}
#container {
  height: 100%;
  padding-bottom: 45px;
  overflow: auto;
}
.mainwrapper {
  width: 960px;
  margin: 0 auto;
}
.content {
  /*width: 56%;*/
  width: 594px;
  min-height: 300px;
  float: left;
}
.sidebar {
  /*width: 26%;*/
  width: 214px;
  float: right;
}
.maininner {
  position: relative;
  margin: 20px 0;
  padding: 28px;
  background-color: #fff;
  border: 1px solid #ddd;
  border-radius: 25px;
}
footer {
  position: fixed;
  z-index: 10;
  bottom: 0;
  width: 100%;
  height: 40px;
  color: #c5ccb8;
  text-align: center;
  background-color: #ddd;
}
footer .copyright {
  font-size: 10px;
  color: #000;
  padding: 2px 0;
}
footer .copyright a {
  color: #000;
  text-decoration: none;
}


/* Width at 980px and below */
@media screen and (max-width: 980px) {
  body {

  }
  .mainwrapper {
    width: 728px;
  }
  .content {
    width: 364px;
  }
  .sidebar {
    width: 214px;
  }
  .maininner {
    margin: 20px 0;
    padding: 28px;
  }
}

/* Width at 768px and below */
@media screen and (max-width: 768px) {
  body {

  }
  .mainwrapper {
    width: 100%;
  }
  .content.maininner {
    width: 80%;
    margin: 20px auto;
    overflow: auto;
    float: none;
  }
  .sidebar.maininner {
    width: 80%;
    margin: 20px auto;
    float: none;
  }
  .maininner {
    margin: 38px 0;
    padding: 28px;
  }
}

/* Width at 640px and below */
@media screen and (max-width: 640px) {
  body {

  }
  .mainwrapper {

  }
  .content {

  }
  .sidebar {

  }
  .maininner {
    margin: 38px 0;
    padding: 28px;
  }
}

/* Width at 640px and below */
@media screen and (max-width: 540px) {
  header img {
    height: 50px;
    padding: 24px 16px 0 0;
    float: right;
  }
  header img:nth-of-type(2) {
    display: none;
  }
}

